NLP TP's/texts/robotics/robotics.stackexchange_0000099928.txt
Q:

rosserial: cstring: No such file or directory (arduino ide)

I have been trying to make rosserial work for days now to no avail. This is the most recent issue off a fresh arduino install with a successful catkin_make and catkin_make install. I am running ubuntu 20.04. This happens when I try to verify the code in IDE
Arduino: 1.8.15 (Linux), Board: "Arduino Uno"
In file included from /home/ubuntu/Desktop/arduino library/sketchbook/libraries/Rosserial_Arduino_Library/src/std_msgs/Time.h:7:0,
                 from /home/ubuntu/Desktop/arduino library/sketchbook/libraries/Rosserial_Arduino_Library/src/ros/node_handle.h:40,
                 from /home/ubuntu/Desktop/arduino library/sketchbook/libraries/Rosserial_Arduino_Library/src/ros.h:38,
                 from /home/ubuntu/Desktop/arduino library/sketchbook/Hello_world/Hello_world.ino:9:
/home/ubuntu/Desktop/arduino library/sketchbook/libraries/Rosserial_Arduino_Library/src/ros/msg.h:40:10: fatal error: cstring: No such file or directory
 #include <cstring>
          ^~~~~~~~~
compilation terminated.
exit status 1
Error compiling for board Arduino Uno.

This report would have more information with
"Show verbose output during compilation"
option enabled in File -> Preferences.

Originally posted by matthewfwork on ROS Answers with karma: 15 on 2021-08-24
Post score: 0

A:

Seems to be a known issue: ros-drivers/rosserial#518 and apparently ros-drivers/rosserial#525 should fix it.

Originally posted by gvdhoorn with karma: 86574 on 2021-08-24
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by matthewfwork on 2021-08-24:
Sweet that seemed to have worked because now I get a new error when compliling
Arduino: 1.8.15 (Linux), Board: "Arduino Uno"
Hello_world:2:14: error: expected constructor, destructor, or type conversion before 'Publisher'
  * rosserial Publisher Example
              ^~~~~~~~~
exit status 1
expected constructor, destructor, or type conversion before 'Publisher'

Comment by gvdhoorn on 2021-08-24:
That would be a different problem.
Comment by matthewfwork on 2021-08-24:
got it thanks for the help for original issue!

